# ten-vad

./: .gitignore  README.md  setup.py
.github/workflows/: test-platforms.yml  test.yml
examples/: TestTenVad.java  plot_pr_curves.py  requirements.txt  test.py
examples/go-tenvad/: README.md  go.mod  main.go  vad.go
examples_onnx/: CMakeLists-python.txt  CMakeLists.txt  README.md  README_python.md  build-and-deploy-linux-python.sh  build-and-deploy-linux.sh  ten_vad_demo.py  ten_vad_python.cc
examples_onnx/cpp/: CMakeLists.txt  build-and-deploy-linux.sh  build-and-deploy-macos.sh
examples_onnx/python/: CMakeLists.txt  build-and-deploy-linux.sh  build-and-deploy-macos.sh
include/: TenVad.java  ten_vad.py
ten_vad/: __init__.py  vad.py
